--- a/templates/monitrc.erb
+++ b/templates/monitrc.erb
@@ -1,9 +1,9 @@
 # /etc/monit/monitrc - Monit Configuration file
-# 
+#
 # This file is handled by puppet, any local changes will be lost
 #
 
-set alert <%= has_variable?("monit_alert") ? monit_alert : monit_default_alert %>
+set alert <%= monit_alert %>
 
 <%- if monit_enable_httpd.to_s == 'yes' then -%>
 <%# BEGIN functions %>
@@ -22,14 +22,14 @@ end
 %>
 <%# END functions %>
 
-set httpd port <%= has_variable?("monit_httpd_port") ? monit_httpd_port : "2812" %> and use address localhost
+set httpd port <%= monit_httpd_port %> and use address localhost
     allow localhost
     allow monit:<%= password %>
 <%- end -%>
 
 set daemon <%= monit_pool_interval %>
 set logfile syslog facility log_daemon
-set mailserver <%= has_variable?("monit_mailserver") ? monit_mailserver : "localhost" %> 
+set mailserver <%= monit_mailserver %>
 
 # Include settings from other files
 include /etc/monit/conf.d/*.monitrc
