--- a/templates/check_process.monitrc.erb
+++ b/templates/check_process.monitrc.erb
@@ -1,11 +1,11 @@
-# Configuration snippet for <%= name %>
-# 
+# Configuration snippet for <%= @name %>
+#
 # This file is handled by puppet, all local modifications will be lost
 
-check process <%= name %>
-  with pidfile "<%= pidfile %>"
-  start program = "<%= start %>" <%= start_extras %>
-  stop program  = "<%= stop %>" <%= stop_extras %>
-<% customlines.to_a.each do |line| -%>
-  <%= line %>
+check process <%= @name %>
+  with pidfile "<%= @pidfile %>"
+  start program = "<%= @start %>" <%= @start_extras %>
+  stop program  = "<%= @stop %>" <%= @stop_extras %>
+<% @customlines.to_a.each do |line| -%>
+  <%= @line %>
 <% end -%>
