--- a/templates/check_process.monitrc.erb
+++ b/templates/check_process.monitrc.erb
@@ -7,5 +7,5 @@ check process <%= @name %>
   start program = "<%= @start %>" <%= @start_extras %>
   stop program  = "<%= @stop %>" <%= @stop_extras %>
 <% @customlines.to_a.each do |line| -%>
-  <%= @line %>
+  <%= line %>
 <% end -%>
