--- a/templates/monitrc.erb
+++ b/templates/monitrc.erb
@@ -13,8 +13,7 @@ set httpd port <%= @monit_httpd_port %>
 <%- end -%>
 
 set daemon <%= @monit_pool_interval %>
-<%# set logfile syslog facility log_daemon %>
-set logfile /var/log/monit.log
+set logfile <%= @monit_log_location %>
 set mailserver <%= @monit_mailserver %>
 
 # Include settings from other files
