--- a/templates/monitrc.erb
+++ b/templates/monitrc.erb
@@ -15,6 +15,10 @@ set httpd port <%= @monit_httpd_port %>
 set daemon <%= @monit_pool_interval %>
 set logfile <%= @monit_log_location %>
 set mailserver <%= @monit_mailserver %>
+<% if @mailname != nil %>
+    using hostname "<%= @mailname %>"
+<% end %>
+
 
 # Include settings from other files
 include /etc/monit/conf.d/*.monitrc
