--- a/templates/monitrc.erb
+++ b/templates/monitrc.erb
@@ -5,19 +5,19 @@
 
 set alert <%= @monit_alert %>
 
-<%- if @monit_enable_httpd.to_s == 'yes' then -%>
+<% if @monit_enable_httpd.to_s == 'yes' then -%>
 set httpd port <%= @monit_httpd_port %>
     # use address localhost
     # allow localhost
     allow <%= @monit_user %>:<%= @monit_password %>
-<%- end -%>
+<% end -%>
 
 set daemon <%= @monit_pool_interval %>
 set logfile <%= @monit_log_location %>
 set mailserver <%= @monit_mailserver %>
-<% if @mailname != nil %>
-    using hostname "<%= @mailname %>"
-<% end %>
+<% if @mailname != nil -%>
+      using hostname "<%= @mailname %>"
+<% end -%>
 
 
 # Include settings from other files
