--- a/templates/monitrc.erb
+++ b/templates/monitrc.erb
@@ -17,8 +17,8 @@ set logfile <%= @monit_log_location %>
 set mailserver <%= @monit_mailserver %>
 <% if @mailname != nil -%>
       using hostname "<%= @mailname %>"
+mail-format { from: monit@<%= @mailname %> }
 <% end -%>
-
 
 # Include settings from other files
 include /etc/monit/conf.d/*.monitrc
