--- a/templates/check_process.monitrc.erb
+++ b/templates/check_process.monitrc.erb
@@ -6,6 +6,6 @@ check process <%= @name %>
   with pidfile "<%= @pidfile %>"
   start program = "<%= @start %>" <%= @start_extras %>
   stop program  = "<%= @stop %>" <%= @stop_extras %>
-<% @customlines.to_a.each do |line| -%>
+<% Array(@customlines).each do |line| -%>
   <%= line %>
 <% end -%>
