Allow to speficy a dependency relation between services
This allows to have ordered shutdown and bootup and avoid issues.

--- a/templates/check_process.monitrc.erb
+++ b/templates/check_process.monitrc.erb
@@ -6,6 +6,9 @@ check process <%= @name %>
   with pidfile "<%= @pidfile %>"
   start program = "<%= @start %>" <%= @start_extras %>
   stop program  = "<%= @stop %>" <%= @stop_extras %>
+<% if @depends -%>
+  depends on <%= @depends %>
+<% end -%>
 <% Array(@customlines).each do |line| -%>
   <%= line %>
 <% end -%>
