On Ubuntu 14.04, all files are included
This should not break backwards compatibility, so there is no switch for
different version.

--- a/templates/monitrc.erb
+++ b/templates/monitrc.erb
@@ -21,4 +21,4 @@ set mail-format { from: monit@<%= @mailname %> }
 <% end -%>
 
 # Include settings from other files
-include /etc/monit/conf.d/*.monitrc
+include /etc/monit/conf.d/*
