Allow to check processes without pidfile

--- a/templates/check_process.monitrc.erb
+++ b/templates/check_process.monitrc.erb
@@ -3,7 +3,11 @@
 # This file is handled by puppet, all local modifications will be lost
 
 check process <%= @name %>
+<% if @matching -%>
+  matching "<%= @matching %>"
+<% else -%>
   with pidfile "<%= @pidfile %>"
+<% end -%>
   start program = "<%= @start %>" <%= @start_extras %>
   stop program  = "<%= @stop %>" <%= @stop_extras %>
 <% if @depends -%>
